# ordem-servico

./: .gitignore  README.md  pyproject.toml
backend/: settings.py  urls.py
backend/core/: models.py  urls.py
backend/core/templates/: base.html
backend/core/templates/includes/: menu.html
backend/crm/: admin.py  models.py  urls.py  views.py
backend/crm/migrations/: 0001_initial.py
backend/docs/: AlpineJS.md
backend/servico/: admin.py  models.py  urls.py  views.py
backend/servico/migrations/: 0001_initial.py
backend/servico/templates/servico/: ordem_servico_detail.html  ordem_servico_form.html  ordem_servico_list.html
docs/: AlpineJS.md
