[tool.poetry]
name = "ordem-servico"
version = "0.1.0"
description = "Projeto com Django e AlpineJS com orientação do mestre Regis Santos"
authors = ["Jorge Luiz Plautz <jorge.plautz@gmail.com>"]
license = "GPLv3.0"
readme = "README.md"
packages = [{include = "ordem_servico"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
django_extensions = "^3.2.3"
python-decouple = "^3.8"
django-ninja = "^0.22.2"
django-localflavor = "^4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
